syntax = "proto3";

package fjarm.users.v1;

import "fjarm/users/v1/user.proto";
import "google/rpc/status.proto";

option go_package = "github.com/fjarm/fjarm/fjarm/users/v1";
option java_multiple_files = true;
option java_outer_classname = "CreateUserResponseProto";
option java_package = "xyz.fjarm.users.v1";

// CreateUserResponse represents the result of attempting an RPC that creates a user.
message CreateUserResponse {
  // The status of the RPC request to create a user.
  optional google.rpc.Status status = 1;
  // The user that was created or an empty result if the RPC was unsuccessful.
  optional fjarm.users.v1.User user = 2;
}
